fix: fixed scrollbar showing

--- a/public/global.css
+++ b/public/global.css
@@ -8,6 +8,6 @@ html, body {
 }
 
 #app {
-  height: 100vh;
-  overflow-y: hidden;
+  display: flex;
+  min-height: 100vh;
 }
